--- a/to-do-list.html
+++ b/to-do-list.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title class="heading">To do list</title>
-    <link rel="stylesheet" href="to-do-list.css">
+    <link rel="stylesheet" href="css/to-do-list.css">
 </head>
 <body>
-    <p class="heading">Todo List</p>
-    <p class="task-status"></p>
-    <div class="todo-input-grid">
-        <input placeholder="Todo name" class="js-todo-name inputt">
-        <input type="date" class="todo-date inputt">
-        <button  class="add-button">Add</button>
+    <div class="container">
+        <p class="heading">Todo List</p>
+        <p class="task-status"></p>
+        <div class="todo-input-grid">
+            <input placeholder="Todo name" class="js-todo-name inputt">
+            <input type="date" class="todo-date inputt">
+            <button  class="add-button">Add</button>
+        </div>
+        <div class="to-do-item todo-grid"></div>
     </div>
-    <div class="to-do-item todo-grid"></div>
-    <script src="to-do-list.js"></script>
+    
+    <script src="js/to-do-list.js"></script>
 </body>
 </html>
